# norg-fmt

./: .gitignore  Cargo.toml  README.md  test.norg
src/: block.rs  converter.rs  inline.rs  main.rs
