[package]
name = "norg-fmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
eyre = "0.6.11"
serde = { version = "1.0.196", features = ["derive"] }
tree-sitter = "0.20.10"
tree-sitter-norg = { git = "https://github.com/nvim-neorg/tree-sitter-norg3" }
