[package]
name = "norg-fmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.1"
chumsky = "0.9.3"
clap = { version = "4.4.18", features = ["derive"] }
eyre = "0.6.11"
itertools = "0.12.1"
regex = "1.10.3"
rust-norg = { git = "https://github.com/nvim-neorg/rust-norg" }
serde = { version = "1.0.196", features = ["derive"] }
